# google-code-jam-twenty-seventeen

./: A-small-attempt0.in  A-small.out  README.md  google-code-jam-twenty-seventeen.cabal
app/: Tidy.hs
src/: Pancake.hs
