name:                google-code-jam-twenty-seventeen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/google-code-jam-twenty-seventeen#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable google-code-jam-twenty-seventeen-pancake
  hs-source-dirs:      app
  main-is:             Pancake.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , google-code-jam-twenty-seventeen
  default-language:    Haskell2010

test-suite google-code-jam-twenty-seventeen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , google-code-jam-twenty-seventeen
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/google-code-jam-twenty-seventeen
